--- a/requirements.txt
+++ b/requirements.txt
@@ -32,10 +32,13 @@ nvidia-nvjitlink-cu12==12.8.93
 nvidia-nvshmem-cu12==3.4.5
 nvidia-nvtx-cu12==12.8.90
 packaging==26.0
+pandas==3.0.1
 propcache==0.4.1
+python-dateutil==2.9.0.post0
 pytorch-lightning==2.6.1
 PyYAML==6.0.3
 setuptools==82.0.0
+six==1.17.0
 sympy==1.14.0
 torch==2.10.0
 torchmetrics==1.8.2
